--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="container min-h-screen bg-[url('images/image.png')] bg-center bg-cover px-28 py-5">
+    <div class="container min-h-screen bg-[url('images/Image.png')] bg-center bg-cover px-28 py-5">
 
         <nav class="flex items-center relative">
 
